--- a/api/templates/make_form.html
+++ b/api/templates/make_form.html
@@ -57,14 +57,14 @@
             </div>
             <div id="fields-container" class="space-y-2">
                 <div class="flex space-x-2 mb-2">
-                    <input type="text" name="fields[0][label]" value="Name" readonly class="p-2 border rounded-md flex-1 bg-gray-100 cursor-not-allowed">
-                    <select name="fields[0][type]" class="p-2 border rounded-md flex-1 bg-gray-100 cursor-not-allowed" disabled>
+                    <input type="text" name="fields[0][label]" value="Name" class="p-2 border rounded-md flex-1 bg-gray-100">
+                    <select name="fields[0][type]" class="p-2 border rounded-md flex-1 bg-gray-100">
                         <option value="text">Text</option>
                     </select>
                 </div>
                 <div class="flex space-x-2 mb-2">
-                    <input type="text" name="fields[1][label]" value="Email" readonly class="p-2 border rounded-md flex-1 bg-gray-100 cursor-not-allowed">
-                    <select name="fields[1][type]" class="p-2 border rounded-md flex-1 bg-gray-100 cursor-not-allowed" disabled>
+                    <input type="text" name="fields[1][label]" value="Email" class="p-2 border rounded-md flex-1 bg-gray-100">
+                    <select name="fields[1][type]" class="p-2 border rounded-md flex-1 bg-gray-100">
                         <option value="email">Email</option>
                     </select>
                 </div>
