--- a/api/templates/submitted.html
+++ b/api/templates/submitted.html
@@ -8,13 +8,8 @@
 </head>
 <body class="bg-gradient-to-r from-blue-200 to-green-100 min-h-screen flex flex-col justify-between px-8">
     <div class="mx-auto bg-white p-8 rounded-lg shadow-lg mt-8 w-full max-w-2xl mx-auto">
-        <h3 class="text-3xl font-normal mb-4 text-center text-gray-700">{{ message }}</h3>
-        <p class="font-normal mb-4 text-center text-gray-700">{{ link }}</p>
-        <div class="mx-auto text-center">
-            <a href="{{ link }}" class="mx-auto bg-blue-500 text-white font-bold py-2 px-4 rounded mt-4 inline-block hover:bg-blue-700">Visit Link</a>
-            <a href="{{ url_for('home') }}" class="mx-auto bg-gray-500 text-white font-bold py-2 px-4 rounded mt-4 inline-block hover:bg-gray-700">Go Back</a>
-        </div>
-       
+        <h3 class="text-3xl font-normal mb-4 text-center text-gray-700">Form submitted successfully!</h3>
+
     </div>
 </body>
 </html>
