--- a/api/templates/view_webinar.html
+++ b/api/templates/view_webinar.html
@@ -15,6 +15,9 @@
                 <a href="#forms" class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-blue-600 hover:border-blue-600">Forms</a>
             </li>
             <li class="mr-2">
+                <a href="#participants" class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-blue-600 hover:border-blue-600">Participants</a>
+            </li>
+            <li class="mr-2">
                 <a href="#certificates" class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-blue-600 hover:border-blue-600">Generate Certificates</a>
             </li>
         </ul>
@@ -49,10 +52,10 @@
                         <td class="px-4 py-2">{{ form.name }}</td>
                         <td class="px-4 py-2">{{ form.type }}</td>
                         <td class="px-4 py-2">
-                            <a href="{{ url_for('view_form', form_id=form.id) }}" class="bg-green-500 text-white font-bold py-1 px-2 rounded hover:bg-green-700">View</a>       
-                            <a href="{{ url_for('edit_form', form_id=form.id) }}" class="bg-yellow-500 text-white font-bold py-1 px-2 rounded hover:bg-yellow-700 ml-2">Edit</a>
+                            <a href="{{ url_for('view_form', form_id=form.id) }}" class="text-blue-500 hover:underline">View</a>       
+                            <a href="{{ url_for('edit_form', form_id=form.id) }}" class="text-yellow-500 hover:underline ml-2">Edit</a>
                             <form action="{{ url_for('delete_form', form_id=form.id) }}" method="post" class="inline-block ml-2">
-                                <button type="submit" onclick="return confirm('Are you sure you want to delete this form?');" class="bg-red-500 text-white font-bold py-1 px-2 rounded hover:bg-red-700">Delete</button>
+                                <button type="submit" onclick="return confirm('Are you sure you want to delete this form?');" class="text-red-500 hover:underline">Delete</button>
                             </form>
                         </td>
                     </tr>
@@ -65,6 +68,14 @@
     <a href="{{ url_for('make_form', webinar_id=webinar.id, form_type='register') }}" class="bg-blue-500 text-white font-bold py-2 px-4 rounded mt-4 inline-block hover:bg-blue-700">Create Registration Form</a>
     <a href="{{ url_for('make_form', webinar_id=webinar.id, form_type='absence') }}" class="bg-blue-500 text-white font-bold py-2 px-4 rounded mt-4 inline-block hover:bg-blue-700">Create Absence Form</a>
 
+    <div id="participants" class="mt-8">
+        <h2 class="text-2xl font-bold mb-4">Participants</h2>
+        <p class="font-normal text-gray-700">Get a glimpse of your registered participants here:</p>
+        <div class="flex mt-8">
+            <a href="{{ url_for('view_participants', webinar_id=webinar.id) }}" class="bg-blue-500 text-white font-bold py-2 px-4 rounded inline-block hover:bg-blue-700">View Participants</a>
+        </div>
+    </div>
+   
 
     <div id="certificates" class="mt-8">
         <h2 class="text-2xl font-bold mb-4">Generate Certificates</h2>
